remove query limit, test css file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://unpkg.com/element-ui@1.1.6/lib/theme-default/index.css">
-  <link rel="stylesheet" href="./style.scss">
+  <!-- <link rel="stylesheet" type="text/scss" href="./style.scss"> -->
+  <!-- <link rel="stylesheet" href="./style.scss"> -->
+  <link rel="stylesheet" href="./style.css">
   <title>Document</title>
 </head>
 <body>
@@ -22,7 +24,7 @@
         <el-col class="col-space" :lg="6" :md="6" :sm="6" :xs="24"> &nbsp; </el-col>
 
         <el-col :lg="6" :md="6" :sm="6" :xs="4"> 
-          <el-button @click="publicFetch"> publicFetch </el-button>
+          <el-button @click="fetchData"> Fetch Data </el-button>
         </el-col>
       </el-row>
       
