--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://unpkg.com/element-ui@1.1.6/lib/theme-default/index.css">
   <link rel="stylesheet" href="./style.css">
-  <title>vue</title>
+  <title>Instagram Caption Searcher</title>
 </head>
 
 <body>
